fixed spacing

--- a/resources/css/index.css
+++ b/resources/css/index.css
@@ -218,7 +218,7 @@ table, th, td {
 .order-prodlist-edit-header {
 	padding: 5px;
 	display: grid;
-	grid-template-columns: 1fr 1fr 1fr 1fr 1fr 0.5fr;
+	grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr 0.5fr;
 	background-color: black;
 	color: white;
 }
@@ -227,7 +227,7 @@ table, th, td {
 	padding: 15px;
 	background-color: white;
 	display: grid;
-	grid-template-columns: 1fr 1fr 1fr 1fr 1fr 0.5fr;
+	grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr 0.5fr;
 	width: 100%;
 	justify-items: left;
 	font-size:75%;
